# discover-hollywood

./: Cargo.toml  Dockerfile  README.md  Trunk.toml  docker-compose.yml
client/: Cargo.toml
client/src/: components.rs  main.rs
client/src/components/: movie_card.rs  movie_page.rs  search_page.rs
core/: Cargo.toml
core/src/: lib.rs  models.rs  usecase.rs
core/src/usecase/: dtos.rs  error.rs
dataset/: Cargo.toml
dataset/src/: consts.rs  database.rs  lib.rs  movielens.rs
dataset/src/movielens/: csv_rows.rs
migrations/2022-05-09-081849_create_tables/: down.sql  up.sql
migrations/2022-05-12-051000_merge_movies_and_links/: down.sql  up.sql
models/: Cargo.toml
models/src/: lib.rs  schema.rs
server/: Cargo.toml
server/src/: handlers.rs  lib.rs  usecase.rs
server/src/usecase/: dtos.rs  error.rs
src/: dataset.rs  lib.rs  main.rs  models.rs  schema.rs
