[package]
name = "discover-hollywood"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
anyhow = { version = "1.0.57", features = ["backtrace"] }
csv = "1.1.6"
diesel = { version = "1.4.8", features = ["sqlite"] }
diesel_migrations = { version = "1.4.0", features = ["sqlite"] }
futures = "0.3.21"
itertools = "0.10.3"
reqwest = "0.11.10"
serde = { version = "1.0.137", features = ["derive"] }
zip = "0.6.2"
