[package]
name = "discover-hollywood"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["dataset", "models"]

[dependencies]
actix-web = "4.0.1"
anyhow = { version = "1.0.57", features = ["backtrace"] }
discover-hollywood-dataset = { path = "dataset" }
