[package]
name = "discover-hollywood"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["core", "dataset", "server"]

[dependencies]
actix-web = "4.0.1"
anyhow = { version = "1.0.57", features = ["backtrace"] }
discover-hollywood-dataset = { path = "dataset" }
discover-hollywood-server = { version = "0.1.0", path = "server" }
env_logger = "0.9.0"
log = "0.4.17"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
