[package]
name = "discover-hollywood-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discover-hollywood-core = { version = "0.1.0", path = "../core", default-features = false }
dotenv = "0.15.0"
load-dotenv = "0.1.2"
log = "0.4.17"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
wasm-logger = "0.2.0"
web-sys = "0.3.57"
yew = "0.19.3"
yew-router = "0.16.0"
