[package]
name = "discover-hollywood-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
anyhow = "1.0.57"
derive_more = "0.99.17"
diesel = { version = "1.4.8", features = ["sqlite", "r2d2"] }
discover-hollywood-core = { version = "0.1.0", path = "../core" }
r2d2 = "0.8.9"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
